Upfated the fastlane screenshots generation

--- a/fastlane/screenshots/screenshots.html
+++ b/fastlane/screenshots/screenshots.html
@@ -96,8 +96,323 @@
       <button class="tabLink" onclick="openTab(event, 'byScreen')">By Screen</button>
     </div>
     <div id="byLanguage" class="tabContent"><h1 class="tabTitle">By Language:</h1>
+      <h2 id="en-US">en-US</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="5">
+            <a id="en-US-iPhone 11 Pro Max" class="deviceName" href="#en-US-iPhone 11 Pro Max">iPhone 11 Pro Max</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-0Comics.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="1" data-counter="1">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-1Comics.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="1" data-counter="2">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-2Comics.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="1" data-counter="3">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-3What If.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="1" data-counter="4">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-4What If.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="1" data-counter="5">
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="5">
+            <a id="en-US-iPhone 8 Plus" class="deviceName" href="#en-US-iPhone 8 Plus">iPhone 8 Plus</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-0Comics.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="1" data-counter="6">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-1Comics.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="1" data-counter="7">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-2Comics.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="1" data-counter="8">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-3What If.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="1" data-counter="9">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-4What If.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="1" data-counter="10">
+            </a>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="5">
+            <a id="en-US-iPhone 8" class="deviceName" href="#en-US-iPhone 8">iPhone 8</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-0Comics.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="1" data-counter="11">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-1Comics.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="1" data-counter="12">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-2Comics.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="1" data-counter="13">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-3What If.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="1" data-counter="14">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone 8-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-4What If.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="1" data-counter="15">
+            </a>
+          </td>
+        </tr>
+      </table>
     </div>
     <div id="byScreen" class="tabContent"><h1 class="tabTitle">By Screen:</h1>
+      <h2 id="0Comics" class="screen">0Comics</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="0Comics-iPhone 11 Pro Max" class="deviceName" href="#0Comics-iPhone 11 Pro Max">iPhone 11 Pro Max</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-0Comics.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="2" data-counter="1">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="0Comics-iPhone 8 Plus" class="deviceName" href="#0Comics-iPhone 8 Plus">iPhone 8 Plus</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-0Comics.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="2" data-counter="2">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="0Comics-iPhone 8" class="deviceName" href="#0Comics-iPhone 8">iPhone 8</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-0Comics.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="2" data-counter="3">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="1Comics" class="screen">1Comics</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="1Comics-iPhone 11 Pro Max" class="deviceName" href="#1Comics-iPhone 11 Pro Max">iPhone 11 Pro Max</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-1Comics.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="2" data-counter="4">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="1Comics-iPhone 8 Plus" class="deviceName" href="#1Comics-iPhone 8 Plus">iPhone 8 Plus</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-1Comics.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="2" data-counter="5">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="1Comics-iPhone 8" class="deviceName" href="#1Comics-iPhone 8">iPhone 8</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-1Comics.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="2" data-counter="6">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="2Comics" class="screen">2Comics</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="2Comics-iPhone 11 Pro Max" class="deviceName" href="#2Comics-iPhone 11 Pro Max">iPhone 11 Pro Max</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-2Comics.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="2" data-counter="7">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="2Comics-iPhone 8 Plus" class="deviceName" href="#2Comics-iPhone 8 Plus">iPhone 8 Plus</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-2Comics.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="2" data-counter="8">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="2Comics-iPhone 8" class="deviceName" href="#2Comics-iPhone 8">iPhone 8</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-2Comics.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="2" data-counter="9">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="3What If" class="screen">3What If</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="3What If-iPhone 11 Pro Max" class="deviceName" href="#3What If-iPhone 11 Pro Max">iPhone 11 Pro Max</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-3What If.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="2" data-counter="10">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="3What If-iPhone 8 Plus" class="deviceName" href="#3What If-iPhone 8 Plus">iPhone 8 Plus</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-3What If.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="2" data-counter="11">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="3What If-iPhone 8" class="deviceName" href="#3What If-iPhone 8">iPhone 8</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-3What If.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="2" data-counter="12">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="4What If" class="screen">4What If</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="4What If-iPhone 11 Pro Max" class="deviceName" href="#4What If-iPhone 11 Pro Max">iPhone 11 Pro Max</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 11 Pro Max-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 11 Pro Max-4What If.png" style="width: 100%;" alt="en-US iPhone 11 Pro Max" data-tab="2" data-counter="13">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="4What If-iPhone 8 Plus" class="deviceName" href="#4What If-iPhone 8 Plus">iPhone 8 Plus</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8 Plus-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8 Plus-4What If.png" style="width: 100%;" alt="en-US iPhone 8 Plus" data-tab="2" data-counter="14">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+        <tr>
+          <th colspan="1">
+            <a id="4What If-iPhone 8" class="deviceName" href="#4What If-iPhone 8">iPhone 8</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone 8-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone 8-4What If.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="2" data-counter="15">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
     </div>
     <div id="overlay">
       <img id="imageDisplay" src="" alt="" />
