--- a/fastlane/screenshots/screenshots.html
+++ b/fastlane/screenshots/screenshots.html
@@ -195,6 +195,38 @@
             </a>
           </td>
         </tr>
+        <tr>
+          <th colspan="5">
+            <a id="en-US-iPhone X" class="deviceName" href="#en-US-iPhone X">iPhone X</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone Xs Max-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-0Comics.png" style="width: 100%;" alt="en-US iPhone X" data-tab="1" data-counter="16">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone Xs Max-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-1Comics.png" style="width: 100%;" alt="en-US iPhone X" data-tab="1" data-counter="17">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone Xs Max-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-2Comics.png" style="width: 100%;" alt="en-US iPhone X" data-tab="1" data-counter="18">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone Xs Max-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-3What If.png" style="width: 100%;" alt="en-US iPhone X" data-tab="1" data-counter="19">
+            </a>
+          </td>
+          <td>
+            <a href="./en-US/iPhone Xs Max-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-4What If.png" style="width: 100%;" alt="en-US iPhone X" data-tab="1" data-counter="20">
+            </a>
+          </td>
+        </tr>
       </table>
     </div>
     <div id="byScreen" class="tabContent"><h1 class="tabTitle">By Screen:</h1>
@@ -408,6 +440,91 @@
           <td>
             <a href="./en-US/iPhone 8-4What If.png" target="_blank" class="screenshotLink">
               <img class="screenshot" src="./en-US/iPhone 8-4What If.png" style="width: 100%;" alt="en-US iPhone 8" data-tab="2" data-counter="15">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="iPhone Xs Max-0Comics" class="screen">iPhone Xs Max-0Comics</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="iPhone Xs Max-0Comics-iPhone X" class="deviceName" href="#iPhone Xs Max-0Comics-iPhone X">iPhone X</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone Xs Max-0Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-0Comics.png" style="width: 100%;" alt="en-US iPhone X" data-tab="2" data-counter="16">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="iPhone Xs Max-1Comics" class="screen">iPhone Xs Max-1Comics</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="iPhone Xs Max-1Comics-iPhone X" class="deviceName" href="#iPhone Xs Max-1Comics-iPhone X">iPhone X</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone Xs Max-1Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-1Comics.png" style="width: 100%;" alt="en-US iPhone X" data-tab="2" data-counter="17">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="iPhone Xs Max-2Comics" class="screen">iPhone Xs Max-2Comics</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="iPhone Xs Max-2Comics-iPhone X" class="deviceName" href="#iPhone Xs Max-2Comics-iPhone X">iPhone X</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone Xs Max-2Comics.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-2Comics.png" style="width: 100%;" alt="en-US iPhone X" data-tab="2" data-counter="18">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="iPhone Xs Max-3What If" class="screen">iPhone Xs Max-3What If</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="iPhone Xs Max-3What If-iPhone X" class="deviceName" href="#iPhone Xs Max-3What If-iPhone X">iPhone X</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone Xs Max-3What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-3What If.png" style="width: 100%;" alt="en-US iPhone X" data-tab="2" data-counter="19">
+            </a>
+            <div class="caption">en-US</div>
+          </td>
+        </tr>
+      </table>
+      <h2 id="iPhone Xs Max-4What If" class="screen">iPhone Xs Max-4What If</h2>
+      <hr>
+      <table>
+        <tr>
+          <th colspan="1">
+            <a id="iPhone Xs Max-4What If-iPhone X" class="deviceName" href="#iPhone Xs Max-4What If-iPhone X">iPhone X</a>
+          </th>
+        </tr>
+        <tr>
+          <td>
+            <a href="./en-US/iPhone Xs Max-4What If.png" target="_blank" class="screenshotLink">
+              <img class="screenshot" src="./en-US/iPhone Xs Max-4What If.png" style="width: 100%;" alt="en-US iPhone X" data-tab="2" data-counter="20">
             </a>
             <div class="caption">en-US</div>
           </td>
